Add refeed URL to the admin view

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ POSTGRES_PASSWORD=nk96VRpurI3PQFV5Xr1ML
 ADMIN_USER=admin
 ADMIN_EMAIL=admin@refeedit.local
 ADMIN_PASSWORD=nk96VRpurI3PQFV5Xr1ML
+SITE_DOMAIN=refeedit.akiel.dev
